--- a/Commands/Custom/locales/es/LC_MESSAGES/messages.po
+++ b/Commands/Custom/locales/es/LC_MESSAGES/messages.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-12-10 23:21+0530\n"
-"PO-Revision-Date: 2021-12-10 23:21+0530\n"
+"POT-Creation-Date: 2021-12-10 23:38+0530\n"
+"PO-Revision-Date: 2021-12-10 23:40+0530\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: es\n"
@@ -15,6 +15,7 @@ msgstr ""
 "X-Poedit-KeywordsList: __\n"
 "X-Poedit-SearchPath-0: StartCommand.php\n"
 "X-Poedit-SearchPath-1: SurveyCommand.php\n"
+"X-Poedit-SearchPath-2: UserinfoCommand.php\n"
 
 #: StartCommand.php:111
 msgid "Hi there!"
@@ -55,6 +56,30 @@ msgstr ""
 #: SurveyCommand.php:214
 msgid "open group"
 msgstr "grupo abierto"
+
+#: UserinfoCommand.php:82
+msgid "Download path has not been defined or does not exist."
+msgstr "La ruta de descarga no se ha definido o no existe."
+
+#: UserinfoCommand.php:87
+msgid "Your Id:"
+msgstr "Tu identificación:"
+
+#: UserinfoCommand.php:88
+msgid "Name:"
+msgstr "Nombre:"
+
+#: UserinfoCommand.php:89
+msgid "Username:"
+msgstr "Nombre de usuario:"
+
+#: UserinfoCommand.php:123
+msgid " file is located at: "
+msgstr "el archivo se encuentra en:"
+
+#: UserinfoCommand.php:125
+msgid "Failed to download."
+msgstr "Failed to download."
 
 #~ msgid "Example"
 #~ msgstr "Ejemplo"
