--- a/Commands/Custom/locales/es/LC_MESSAGES/messages.po
+++ b/Commands/Custom/locales/es/LC_MESSAGES/messages.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-12-11 00:10+0530\n"
-"PO-Revision-Date: 2021-12-11 00:10+0530\n"
+"POT-Creation-Date: 2021-12-13 16:20+0530\n"
+"PO-Revision-Date: 2021-12-13 16:23+0530\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: es\n"
@@ -17,6 +17,23 @@ msgstr ""
 "X-Poedit-SearchPath-1: SurveyCommand.php\n"
 "X-Poedit-SearchPath-2: UserinfoCommand.php\n"
 "X-Poedit-SearchPath-3: VideoCommand.php\n"
+"X-Poedit-SearchPath-4: CancelCommand.php\n"
+
+#: CancelCommand.php:74
+msgid "Nothing to cancel."
+msgstr "Nada que cancelar."
+
+#: CancelCommand.php:86
+msgid "No active conversation!"
+msgstr "No hay conversación activa ¡Conversación!"
+
+#: CancelCommand.php:96
+msgid "Conversation"
+msgstr "Conversacion"
+
+#: CancelCommand.php:96
+msgid "cancelled!"
+msgstr "¡cancelada!"
 
 #: StartCommand.php:111
 msgid "Hi there!"
@@ -24,7 +41,7 @@ msgstr "¡Hola!"
 
 #: StartCommand.php:112
 msgid "Type /help to see all commands!"
-msgstr "Escribe /help  para ver todos los comandos."
+msgstr "Escribe /help para ver todos los comandos."
 
 #: SurveyCommand.php:132
 msgid "Share Location"
