--- a/Commands/Custom/locales/es/LC_MESSAGES/messages.po
+++ b/Commands/Custom/locales/es/LC_MESSAGES/messages.po
@@ -18,6 +18,7 @@ msgstr ""
 "X-Poedit-SearchPath-2: UserinfoCommand.php\n"
 "X-Poedit-SearchPath-3: VideoCommand.php\n"
 "X-Poedit-SearchPath-4: CancelCommand.php\n"
+"X-Poedit-SearchPath-5: GenericmessageCommand.php\n"
 
 #: CancelCommand.php:74
 msgid "Nothing to cancel."
