--- a/Commands/Custom/locales/es/LC_MESSAGES/messages.po
+++ b/Commands/Custom/locales/es/LC_MESSAGES/messages.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-12-13 16:20+0530\n"
-"PO-Revision-Date: 2021-12-13 16:23+0530\n"
+"POT-Creation-Date: 2021-12-13 17:03+0530\n"
+"PO-Revision-Date: 2021-12-13 17:08+0530\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: es\n"
@@ -21,22 +21,87 @@ msgstr ""
 "X-Poedit-SearchPath-5: GenericmessageCommand.php\n"
 "X-Poedit-SearchPath-6: CallbackqueryCommand.php\n"
 "X-Poedit-SearchPath-7: ChoseninlineresultCommand.php\n"
+"X-Poedit-SearchPath-8: InlinequeryCommand.php\n"
 
-#: CancelCommand.php:74
+#: CancelCommand.php:68
 msgid "Nothing to cancel."
 msgstr "Nada que cancelar."
 
-#: CancelCommand.php:86
+#: CancelCommand.php:101
 msgid "No active conversation!"
 msgstr "No hay conversación activa ¡Conversación!"
 
-#: CancelCommand.php:96
+#: CancelCommand.php:111
 msgid "Conversation"
 msgstr "Conversacion"
 
-#: CancelCommand.php:96
+#: CancelCommand.php:111
 msgid "cancelled!"
 msgstr "¡cancelada!"
+
+#: InlinequeryCommand.php:77
+msgid "Simple text using InputTextMessageContent"
+msgstr "Texto simple usando InputTextMessageContent"
+
+#: InlinequeryCommand.php:78
+msgid "this will return Text"
+msgstr "esto devolverá el texto"
+
+#: InlinequeryCommand.php:83
+msgid "The query that got you here:"
+msgstr "La consulta que te trajo aquí:"
+
+#: InlinequeryCommand.php:91
+msgid "Best"
+msgstr "La mejor"
+
+#: InlinequeryCommand.php:92
+msgid "Friend"
+msgstr "Amiga"
+
+#: InlinequeryCommand.php:98
+msgid "The center of the world!"
+msgstr "¡El centro del mundo!"
+
+#: InlinequeryCommand.php:106
+msgid "No-Mans-Land"
+msgstr "Tierra de nadie"
+
+#: InlinequeryCommand.php:107
+msgid "In the middle of Nowhere"
+msgstr "En el medio de la nada"
+
+#: InlinequeryCommand.php:124
+msgid "This is a gif"
+msgstr "Esto es un gif"
+
+#: InlinequeryCommand.php:125
+msgid "This is a gif caption"
+msgstr "Esta es una leyenda gif"
+
+#: InlinequeryCommand.php:135
+msgid "This is a animated gif"
+msgstr "Este es un gif animado"
+
+#: InlinequeryCommand.php:136
+msgid "This is a animated gif caption"
+msgstr "Este es un título gif animado"
+
+#: InlinequeryCommand.php:145
+msgid "This is a photo"
+msgstr "Esto es una foto"
+
+#: InlinequeryCommand.php:146
+msgid "This is a photo caption"
+msgstr "Este es un pie de foto"
+
+#: InlinequeryCommand.php:156
+msgid "This is a video"
+msgstr "Este es un video"
+
+#: InlinequeryCommand.php:157
+msgid "This is a video caption"
+msgstr "Esta es una leyenda de video"
 
 #: StartCommand.php:111
 msgid "Hi there!"
