--- a/Commands/Custom/locales/es/LC_MESSAGES/messages.po
+++ b/Commands/Custom/locales/es/LC_MESSAGES/messages.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-12-13 18:03+0530\n"
-"PO-Revision-Date: 2021-12-13 18:05+0530\n"
+"POT-Creation-Date: 2021-12-13 18:22+0530\n"
+"PO-Revision-Date: 2021-12-13 18:22+0530\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: es\n"
@@ -23,6 +23,7 @@ msgstr ""
 "X-Poedit-SearchPath-7: ChoseninlineresultCommand.php\n"
 "X-Poedit-SearchPath-8: InlinequeryCommand.php\n"
 "X-Poedit-SearchPath-9: HelpCommand.php\n"
+"X-Poedit-SearchPath-10: HtmlGameCommand.php\n"
 
 #: CancelCommand.php:68
 msgid "Nothing to cancel."
@@ -71,6 +72,10 @@ msgstr "No hay ayuda disponible: comando"
 #: HelpCommand.php:104
 msgid "not found"
 msgstr "extraviado"
+
+#: HtmlGameCommand.php:59
+msgid "Play"
+msgstr "Tocar"
 
 #: InlinequeryCommand.php:77
 msgid "Simple text using InputTextMessageContent"
